# contrast-app-identifier

./: .env.example  .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/learnings/: 2026-01-30.md
.github/workflows/: ci.yml
docs/: MANUAL_TESTING.md  PROJECT_WALKTHROUGH.md  mcp-tool-usage-research.md
docs/plans/: 2026-01-30-contrast-app-identifier-design.md
src/app_identifier/: __init__.py  agent.py  config.py  dependencies.py  main.py  mcp_tools.py  models.py  providers.py
tests/: __init__.py  test_config.py  test_e2e.py  test_mcp_integration.py  test_models.py
